# AudioAnalysisTool

./: README.md
Automation/CI/: JenkinsBuildCILinux.sh  JenkinsBuildCIOSX.sh  JenkinsBuildCIWindows.bat
Automation/Release/: JenkinsBuildReleaseLinux.sh  JenkinsBuildReleaseOSX.sh  JenkinsBuildReleaseWindows.bat
Source/: AudioAnalysisTool.pro  AudioFile.cpp  AudioFile.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Mediator.cpp  Mediator.h  Singleton.h  TabControl.cpp  TabControl.h  TransientChart.cpp  TransientChart.h  TransientDetection.cpp  TransientDetection.h  TransientDetectionSettings.cpp  TransientDetectionSettings.h  TransientSettings.cpp  TransientSettings.h  TransientTabContents.cpp  TransientTabContents.h  TransientTabControl.cpp  TransientTabControl.h  TransientTable.cpp  TransientTable.h  TransientView.cpp  TransientView.h  Waveform.cpp  Waveform.h  WaveformGraphicsItem.cpp  WaveformGraphicsItem.h  WaveformView.cpp  WaveformView.h  main.cpp
Source/CMakeSupport/: CMakeLists.AudioLib.txt  CMakeLists.CompilerSettings.txt  CMakeLists.Externals.txt
